# aethernaut

./: README.md  replit.md
artifacts/aethernaut/: index.html  package.json
artifacts/aethernaut/.replit-artifact/: artifact.toml
artifacts/aethernaut/src/: App.tsx  index.css
artifacts/aethernaut/src/components/layout/: AppLayout.tsx
artifacts/aethernaut/src/lib/: format.ts
artifacts/aethernaut/src/pages/: AgentDetail.tsx  AgentRegistry.tsx  BehavioralLab.tsx  CoalitionDetail.tsx  Coalitions.tsx  NetworkOverview.tsx  Tasks.tsx
artifacts/api-server/src/routes/: agents.ts  behavioral.ts  coalitions.ts  contract.ts  network.ts  tasks.ts
contracts/aethernaut-mesh/: Cargo.toml
contracts/aethernaut-mesh/.cargo/: config.toml
contracts/aethernaut-mesh/artifacts/: aethernaut_mesh.wasm
contracts/aethernaut-mesh/src/: lib.rs
lib/api-spec/: openapi.yaml
lib/db/src/schema/: agents.ts  behavioral.ts  coalitions.ts  tasks.ts
scripts/deploy/: deploy_and_interact.py  fund_and_deploy.sh  github_push.py  injective_sign.py  package.json
sdk/aethernaut-sdk/: package.json
sdk/aethernaut-sdk/src/: index.ts
